# webapp_template

./: .dockerignore  .gitignore  Dockerfile  Makefile  api_router.py  app.py  file_router.py  pyproject.toml  requirements.txt
frontend/: .gitignore  .pnp.cjs  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
