[tool.poetry]
name = "analyzer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
aiofiles = "^24.1.0"
uvicorn = "^0.30.5"
litestar = "^2.10.0"
pydantic = "^2.8.2"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
