[tool.poetry]
name = "analyzer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
aiofiles = "^24.1.0"
uvicorn = "^0.30.6"
litestar = "^2.12.1"
pydantic = "^2.9.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
